--- a/aplicaciones/www/index.html
+++ b/aplicaciones/www/index.html
@@ -7,32 +7,32 @@
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="/apple-touch-icon.png" />
 
-    <!-- <link rel="canonical" href="https://enflujo.com" /> -->
+    <link rel="canonical" href="https://deseos.enflujo.com" />
 
     <title>ENSAYOS SOBRE EL DESEO (I)</title>
-    <!-- <meta name="description" content="Descripción del sitio...." /> -->
+    <meta name="description" content="¿Qué desea desear?" />
 
     <!-- OpenGraph -->
     <meta property="og:locale" content="es_CO" />
-    <!-- <meta property="og:site_name" content="EnFlujo" /> -->
+    <meta property="og:site_name" content="ENSAYOS SOBRE EL DESEO (I)" />
     <meta property="og:type" content="website" />
-    <!-- <meta property="og:url" content="https://enflujo.com" /> -->
-    <!-- <meta property="og:title" content="Titulo ..." /> -->
-    <!-- <meta property="og:description" content="Descripción ..." /> -->
-    <!-- <meta property="og:image" content="https://xxxxxx.jpg" /> -->
-    <!-- <meta property="og:image:alt" content="Texto que describe la imagen" /> -->
-    <!-- <meta property="og:image:width" content="1200" /> -->
-    <!-- <meta property="og:image:height" content="630" /> -->
+    <meta property="og:url" content="https://deseos.enflujo.com" />
+    <meta property="og:title" content="ENSAYOS SOBRE EL DESEO (I)" />
+    <meta property="og:description" content="¿Qué desea desear?" />
+    <meta property="og:image" content="https://deseos.enflujo.com/imagen_OG.jpg" />
+    <meta property="og:image:alt" content="ENSAYOS SOBRE EL DESEO (I)" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
 
     <!-- Twitter -->
-    <!-- <meta name="twitter:card" content="summary_large_image" /> -->
-    <!-- <meta name="twitter:site" content="@labenflujo" /> -->
-    <!-- <meta name="twitter:creator" content="@labenflujo" /> -->
-    <!-- <meta name="twitter:url" content="https://enflujo.com" /> -->
-    <!-- <meta name="twitter:title" content="Titulo ..." /> -->
-    <!-- <meta name="twitter:description" content="Descripción ..." /> -->
-    <!-- <meta name="twitter:image" content="https://xxxxxx.jpg" /> -->
-    <!-- <meta name="twitter:image:alt" content="Texto que describe la imagen" /> -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:site" content="@labenflujo" />
+    <meta name="twitter:creator" content="@labenflujo" />
+    <meta name="twitter:url" content="https://deseos.enflujo.com" />
+    <meta name="twitter:title" content="ENSAYOS SOBRE EL DESEO (I)" />
+    <meta name="twitter:description" content="¿Qué desea desear?" />
+    <meta name="twitter:image" content="https://deseos.enflujo.com/imagen_OG.jpg" />
+    <meta name="twitter:image:alt" content="ENSAYOS SOBRE EL DESEO (I)" />
   </head>
   <body>
     <div id="aplicacion"></div>
