--- a/aplicaciones/www/index.html
+++ b/aplicaciones/www/index.html
@@ -33,6 +33,12 @@
     <meta name="twitter:description" content="¿Qué desea desear?" />
     <meta name="twitter:image" content="https://deseos.enflujo.com/imagen_OG.jpg" />
     <meta name="twitter:image:alt" content="ENSAYOS SOBRE EL DESEO (I)" />
+
+    <script
+      defer
+      src="https://analitica.enflujo.com/script.js"
+      data-website-id="569a36fc-18d4-4ee4-a40c-7c7a9a35b3a1"
+    ></script>
   </head>
   <body>
     <div id="aplicacion"></div>
